opa/rekor-constraint-verify.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRekorVerify
metadata:
  name: enforce-rekor-verify
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    # namespaces:
    #   - "demo-cicd"
  parameters:
    rekorServerURL: "http://rekor-server.tssc-demo-rekor.svc.cluster.local:3000"
